--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -24,6 +25,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -65,6 +67,124 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper">
+        <div class="intro container">
+          <div class="row">
+            <div class="link-wrapper">
+              <a href="#order">
+                <h2 class="link-title">ORDER ONLINE</h2>
+                <p> Delicious food delivered to your door</p>
+              </a>
+            </div>
+            <div class="link-wrapper">
+              <a href="#booking">
+                <h2 class="link-title">BOOK A TABLE</h2>
+                <p>Come to our restaurant</p>
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="hours-wrapper">
+              <h2 class="link title"> OPENING HOURS</h2>
+              <p>MON-SUN, 12PM-11PM</p>
+            </div>
+          </div>
+        </div>
+        <div class="opinions">
+          <div class="main-carousel">
+            <div class="carousel-cell">
+              <article class="opinion">
+                <div class="img">
+                  <img src="images/assets/pizza-1.jpg" alt=".." title="..">
+                </div>
+                <div class="opinion-description">
+                  <h2 class="title">Best pizza ever</h2>
+                  <p>In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex, dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                </div>
+              </article>
+            </div>
+            <div class="carousel-cell">
+              <article class="opinion">
+                <div class="img">
+                  <img src="images/assets/pizza-2.jpg" alt=".." title="..">
+                </div>
+                <div class="opinion-description">
+                  <h2 class="title">Cosy place</h2>
+                  <p>In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex, dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                </div>
+              </article>
+            </div>
+            <div class="carousel-cell">
+              <article class="opinion">
+                <div class="img">
+                  <img src="images/assets/pizza-3.jpg" alt=".." title="..">
+                </div>
+                <div class="opinion-description">
+                  <h2 class="title">Real italian flavour</h2>
+                  <p>In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex, dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+        <div class="galery">
+          <div class="row">
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-4.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-5.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-6.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-7.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-8.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="image-wrapper">
+              <img src="images/assets/pizza-9.jpg" alt=".." title="..">
+              <div class="icon-wrapper">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <a href="#">View more on instagram</a>
+        </footer>
+      </div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -251,6 +371,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   <script src="js/app.js" type="module"></script>
 </body>
 
