--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
+    integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -71,30 +73,28 @@
       <div class="home-wrapper">
         <div class="intro container">
           <div class="row">
-            <div class="link-wrapper">
+            <div class="col-md-6 link-wrapper">
               <a href="#order">
                 <h2 class="link-title">ORDER ONLINE</h2>
                 <p> Delicious food delivered to your door</p>
               </a>
             </div>
-            <div class="link-wrapper">
+            <div class="col-md-6 link-wrapper">
               <a href="#booking">
                 <h2 class="link-title">BOOK A TABLE</h2>
                 <p>Come to our restaurant</p>
               </a>
             </div>
-          </div>
-          <div class="row">
-            <div class="hours-wrapper">
+            <div class="col-md-6 hours-wrapper">
               <h2 class="link title"> OPENING HOURS</h2>
               <p>MON-SUN, 12PM-11PM</p>
             </div>
           </div>
         </div>
-        <div class="opinions">
-          <div class="main-carousel">
-            <div class="carousel-cell">
-              <article class="opinion">
+        <div class="container">
+          <div class="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item">
                 <div class="img">
                   <img src="images/assets/pizza-1.jpg" alt=".." title="..">
                 </div>
@@ -104,10 +104,10 @@
                     tempor
                     non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
                 </div>
-              </article>
+              </div>
             </div>
-            <div class="carousel-cell">
-              <article class="opinion">
+            <div class="carousel-inner">
+              <div class="carousel-item">
                 <div class="img">
                   <img src="images/assets/pizza-2.jpg" alt=".." title="..">
                 </div>
@@ -117,10 +117,10 @@
                     tempor
                     non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
                 </div>
-              </article>
+              </div>
             </div>
-            <div class="carousel-cell">
-              <article class="opinion">
+            <div class="carousel-inner">
+              <div class="carousel-item">
                 <div class="img">
                   <img src="images/assets/pizza-3.jpg" alt=".." title="..">
                 </div>
@@ -130,10 +130,11 @@
                     tempor
                     non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
                 </div>
-              </article>
+              </div>
             </div>
           </div>
         </div>
+
         <div class="galery">
           <div class="row">
             <div class="image-wrapper">
@@ -372,6 +373,15 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"
+    integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J"
+    crossorigin="anonymous"></script>
   <script src="js/app.js" type="module"></script>
 </body>
 
