--- a/src/index.html
+++ b/src/index.html
@@ -74,19 +74,19 @@
       <div class="home-wrapper">
         <div class="intro container">
           <div class="row">
-            <div class="col-md-6 order-link-wrapper">
+            <div class="col-md-6  order-link-wrapper pr-1">
               <a href="#order">
                 <h2 class="link-title">ORDER ONLINE</h2>
                 <p> Delicious food delivered to your door</p>
               </a>
             </div>
-            <div class="col-md-6 booking-link-wrapper">
+            <div class="col-md-6 pl-1 booking-link-wrapper">
               <a href="#booking">
                 <h2 class="link-title">BOOK A TABLE</h2>
                 <p>Come to our restaurant</p>
               </a>
             </div>
-            <div class="col hours-wrapper">
+            <div class="col hours-wrapper mt-1">
               <a href="#hours">
                 <h2 class="link title"> OPENING HOURS</h2>
                 <p>MON-SUN, 12PM-11PM</p>
@@ -100,10 +100,10 @@
           <div class="col carousel-inner">
             <div class="carousel-item active">
 
-              <div class="col-md-4 card">
-                <img class="card-img-left" src="images/assets/pizza-1.jpg">
+              <div class="card">
+                <img class="card-img" src="images/assets/pizza-1.jpg">
               </div>
-              <div class="col-md-8 card-body">
+              <div class="card-body">
                 <h2 class="card-title">Best pizza ever</h2>
                 <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
                   dapibus ut
@@ -113,10 +113,10 @@
             </div>
 
             <div class="carousel-item">
-              <div class="col-md-4 card">
-                <img class="card-img-left" src="images/assets/pizza-2.jpg">
+              <div class="card">
+                <img class="card-img" src="images/assets/pizza-2.jpg">
               </div>
-              <div class="col-md-8 card-body">
+              <div class="card-body">
                 <h2 class="card-title">Cosy place</h2>
                 <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
                   dapibus ut
@@ -126,10 +126,10 @@
             </div>
 
             <div class="carousel-item">
-              <div class="col-md-4 card">
-                <img class="card-img-left" src="images/assets/pizza-3.jpg">
+              <div class="card">
+                <img class="card-img" src="images/assets/pizza-3.jpg">
               </div>
-              <div class="col-md-8 card-body">
+              <div class="card-body">
                 <h2 class="card-title">Real italian flavour</h2>
                 <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
                   dapibus ut
@@ -141,52 +141,51 @@
         </div>
 
 
-        <div class="galery container">
-          <div class="row">
-            <div class="col-md-12 image-wrapper">
+        <div class="gallery container">
+          <div class="col-md-12 image-wrapper">
+            <div class="first-row row">
 
-              <figure class="col-md-4">
+              <figure class="col-md-4 justify-content-center align-items-center gallery-item">
                 <img src="images/assets/pizza-4.jpg">
-                <div class="icon-wrapper">
+                <div class="icon-wrapper position-absolute">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
-              <figure class="col-md-4">
+              <figure class="col-md-4 justify-content-center align-items-center gallery-item">
                 <img src="images/assets/pizza-5.jpg">
-                <div class="icon-wrapper">
+                <div class="icon-wrapper position-absolute">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
-              <figure class="col-md-4">
+              <figure class="col-md-4 justify-content-center align-items-center gallery-item">
                 <img src="images/assets/pizza-6.jpg">
-                <div class="icon-wrapper">
+                <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 image-wrapper">
-              <figure class="col-md-4">
+
+            <div class="second-row row">
+              <figure class="col-md-4 gallery-item justify-content-center align-items-center">
                 <img src="images/assets/pizza-7.jpg">
-                <div class="icon-wrapper">
+                <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
-              <figure class="col-md-4">
-                <img src="images/assets/pizza-7.jpg">
-                <div class="icon-wrapper">
+              <figure class="col-md-4 justify-content-center align-items-center gallery-item">
+                <img src="images/assets/pizza-8.jpg">
+                <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
-              <figure class="col-md-4">
+              <figure class="col-md-4 justify-content-center align-items-center gallery-item">
                 <img src="images/assets/pizza-9.jpg">
-                <div class="icon-wrapper">
+                <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
@@ -195,7 +194,7 @@
           </div>
         </div>
         <footer>
-          <a href="#">View more on instagram</a>
+          <a class="home-page-footer" href=" #">View more on instagram</a>
         </footer>
       </div>
     </section>
