--- a/src/index.html
+++ b/src/index.html
@@ -75,66 +75,82 @@
         <div class="intro container">
           <div class="row">
             <div class="col-md-6  order-link-wrapper pr-1">
-              <a href="#order">
+              <a type=button class="btn" href="#order">
                 <h2 class="link-title">ORDER ONLINE</h2>
-                <p> Delicious food delivered to your door</p>
               </a>
+              <p class="subtitle"> Delicious food delivered to your door</p>
             </div>
             <div class="col-md-6 pl-1 booking-link-wrapper">
-              <a href="#booking">
+              <a type=button class="btn" href="#booking">
                 <h2 class="link-title">BOOK A TABLE</h2>
-                <p>Come to our restaurant</p>
               </a>
+              <p class="subtitle">Come to our restaurant</p>
             </div>
             <div class="col hours-wrapper mt-1">
-              <a href="#hours">
+              <a type=button class="btn" href="#hours">
                 <h2 class="link title"> OPENING HOURS</h2>
-                <p>MON-SUN, 12PM-11PM</p>
               </a>
+              <p class="subtitle">MON-SUN, 12PM-11PM</p>
             </div>
           </div>
         </div>
 
 
-        <div id="carousel" class="carousel slide container" data-ride="carousel">
+        <div id="carousel" class="carousel slide container" data-ride="carousel" data-interval="3000">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+          </ol>
+
           <div class="col carousel-inner">
             <div class="carousel-item active">
 
-              <div class="card">
+              <div class="card-horizontal">
                 <img class="card-img" src="images/assets/pizza-1.jpg">
-              </div>
-              <div class="card-body">
-                <h2 class="card-title">Best pizza ever</h2>
-                <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
-                  dapibus ut
-                  tempor
-                  non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                <div class="card-body">
+                  <h2 class="card-title">Best pizza ever</h2>
+                  <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
+                    ex,
+                    dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                  <footer class="blockquote-footer">Mark
+                  </footer>
+                </div>
               </div>
             </div>
 
+
             <div class="carousel-item">
-              <div class="card">
+              <div class="card-horizontal">
                 <img class="card-img" src="images/assets/pizza-2.jpg">
-              </div>
-              <div class="card-body">
-                <h2 class="card-title">Cosy place</h2>
-                <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
-                  dapibus ut
-                  tempor
-                  non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                <div class="card-body">
+                  <h2 class="card-title">Cosy place</h2>
+                  <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
+                    ex,
+                    dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                  <footer class="blockquote-footer">Diana
+                  </footer>
+                </div>
               </div>
             </div>
 
             <div class="carousel-item">
-              <div class="card">
+              <div class="card-horizontal">
                 <img class="card-img" src="images/assets/pizza-3.jpg">
-              </div>
-              <div class="card-body">
-                <h2 class="card-title">Real italian flavour</h2>
-                <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus ex,
-                  dapibus ut
-                  tempor
-                  non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                <div class="card-body">
+                  <h2 class="card-title">Real italian flavour</h2>
+                  <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
+                    ex,
+                    dapibus ut
+                    tempor
+                    non, porta id mi. Pellentesque accumsan et turpis non tincidunt.</p>
+                  <footer class="blockquote-footer">Lisa
+                  </footer>
+                </div>
               </div>
             </div>
           </div>
