finish home page

--- a/src/index.html
+++ b/src/index.html
@@ -73,14 +73,14 @@
     <section id="home">
       <div class="home-wrapper">
         <div class="intro container">
-          <div class="row">
-            <div class="col-md-6  order-link-wrapper pr-1">
+          <div class="row intro-wrapper">
+            <div class="col-md-6  order link-wrapper pr-1">
               <a type=button class="btn" href="#order">
                 <h2 class="link-title">ORDER ONLINE</h2>
               </a>
               <p class="subtitle"> Delicious food delivered to your door</p>
             </div>
-            <div class="col-md-6 pl-1 booking-link-wrapper">
+            <div class="col-md-6 pl-1 booking link-wrapper">
               <a type=button class="btn" href="#booking">
                 <h2 class="link-title">BOOK A TABLE</h2>
               </a>
@@ -88,9 +88,9 @@
             </div>
             <div class="col hours-wrapper mt-1">
               <a type=button class="btn" href="#hours">
-                <h2 class="link title"> OPENING HOURS</h2>
+                <h2 class="link-title-hours"> OPENING HOURS</h2>
               </a>
-              <p class="subtitle">MON-SUN, 12PM-11PM</p>
+              <p class="subtitle-hours">MON-SUN, 12PM-11PM</p>
             </div>
           </div>
         </div>
