add wrongReservation method to booking

--- a/src/index.html
+++ b/src/index.html
@@ -256,9 +256,9 @@
           <label class="booking-option-title"> <!-- option-row -->
             Hours
             <div class="widget-amount hours-amount"> <!-- widget-amount -->
-              <a class="btn-quantity" href="#less"><i class="fas fa-minus"></i></a>
-              <input class="amount" type="text" name="hours" value="1">
-              <a class="btn-quantity" href="#more"><i class="fas fa-plus"></i></a>
+              <a class="btn-quantity hours" href="#less"><i class="fas fa-minus"></i></a>
+              <input class="amount" type="text" name="hours" value="1" step="0.5"min="0.5">
+              <a class="btn-quantity hours" href="#more"><i class="fas fa-plus"></i></a>
             </div>
           </label>
           <div> <!-- option-row -->
