woring on Booking- wrongReservation method

--- a/src/index.html
+++ b/src/index.html
@@ -75,19 +75,19 @@
         <div class="intro container">
           <div class="row intro-wrapper">
             <div class="col-md-6  order link-wrapper pr-1">
-              <a type=button class="btn" href="#order">
+              <a class="btn" href="#order">
                 <h2 class="link-title">ORDER ONLINE</h2>
               </a>
               <p class="subtitle"> Delicious food delivered to your door</p>
             </div>
             <div class="col-md-6 pl-1 booking link-wrapper">
-              <a type=button class="btn" href="#booking">
+              <a class="btn" href="#booking">
                 <h2 class="link-title">BOOK A TABLE</h2>
               </a>
               <p class="subtitle">Come to our restaurant</p>
             </div>
             <div class="col hours-wrapper mt-1">
-              <a type=button class="btn" href="#hours">
+              <a class="btn" href="#hours">
                 <h2 class="link-title-hours"> OPENING HOURS</h2>
               </a>
               <p class="subtitle-hours">MON-SUN, 12PM-11PM</p>
@@ -107,7 +107,7 @@
             <div class="carousel-item active">
 
               <div class="card-horizontal">
-                <img class="card-img" src="images/assets/pizza-1.jpg">
+                <img class="card-img" src="images/assets/pizza-1.jpg" alt="image">
                 <div class="card-body">
                   <h2 class="card-title">Best pizza ever</h2>
                   <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
@@ -124,7 +124,7 @@
 
             <div class="carousel-item">
               <div class="card-horizontal">
-                <img class="card-img" src="images/assets/pizza-2.jpg">
+                <img class="card-img" src="images/assets/pizza-2.jpg" alt="image">
                 <div class="card-body">
                   <h2 class="card-title">Cosy place</h2>
                   <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
@@ -140,7 +140,7 @@
 
             <div class="carousel-item">
               <div class="card-horizontal">
-                <img class="card-img" src="images/assets/pizza-3.jpg">
+                <img class="card-img" src="images/assets/pizza-3.jpg" alt="image">
                 <div class="card-body">
                   <h2 class="card-title">Real italian flavour</h2>
                   <p class="card-text">In quis rhoncus enim. Integer tristique tristique lorem vel eleifend. Ut risus
@@ -162,21 +162,21 @@
             <div class="first-row row">
 
               <figure class="col-md-4 justify-content-center align-items-center gallery-item">
-                <img src="images/assets/pizza-4.jpg">
+                <img src="images/assets/pizza-4.jpg" alt="image">
                 <div class="icon-wrapper position-absolute">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
               <figure class="col-md-4 justify-content-center align-items-center gallery-item">
-                <img src="images/assets/pizza-5.jpg">
+                <img src="images/assets/pizza-5.jpg" alt="image">
                 <div class="icon-wrapper position-absolute">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
               <figure class="col-md-4 justify-content-center align-items-center gallery-item">
-                <img src="images/assets/pizza-6.jpg">
+                <img src="images/assets/pizza-6.jpg" alt="image">
                 <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
@@ -186,21 +186,21 @@
 
             <div class="second-row row">
               <figure class="col-md-4 gallery-item justify-content-center align-items-center">
-                <img src="images/assets/pizza-7.jpg">
+                <img src="images/assets/pizza-7.jpg" alt="image">
                 <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
               <figure class="col-md-4 justify-content-center align-items-center gallery-item">
-                <img src="images/assets/pizza-8.jpg">
+                <img src="images/assets/pizza-8.jpg" alt="image">
                 <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
                 </div>
               </figure>
               <figure class="col-md-4 justify-content-center align-items-center gallery-item">
-                <img src="images/assets/pizza-9.jpg">
+                <img src="images/assets/pizza-9.jpg" alt="image">
                 <div class="icon-wrapper position-absolute ">
                   <i class="fas fa-heart"></i>
                   <i class="fas fa-share-alt"></i>
